Fix menu wrapping

--- a/source/scss/base/_header.scss
+++ b/source/scss/base/_header.scss
@@ -39,7 +39,7 @@
 		.navigation-menu-wrapper {
 			align-items: center;
 			display: flex;
-			gap: 1.5rem;
+			gap: 1rem;
 		}
 
 		#menu-toggle {
